<resources>
    <string name="app_name">Thumb Fight</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="button_punch1">Punch</string>
    <string name="button_block1">Block</string>
    <string name="button_punch2">Punch</string>
    <string name="button_block2">Block</string>
    <string name="action_settings">Settings</string>
    <string name="menu_load">Load</string>
    <string name="menu_save">Save</string>
    <string name="menu_newgame">New Game</string>
    <string name="buttonBottom">OK</string>
    <string name="bottom_player_wins">CONGRATULATION!\n%1$s wins!</string>
    <string name="menu_about">About</string>
    <string name="round">Round %1$s</string>
    <string name="menu_about_message">Made by: Eirik\nVersion: 1.0\nCopyright\u00a92015\nAcme Industries</string>
    <string name="music_on_off">Music on/off</string>
    <string name="menu_title">Menu</string>
</resources>
