<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu"
        android:title="@string/menu_title"
        app:showAsAction="always">

        <menu>
            <!-- Settings, should always be in the overflow -->
            <item
                android:id="@+id/menu_load"
                android:icon="@drawable/load_24"
                android:title="@string/menu_load"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_save"
                android:icon="@drawable/save_24"
                android:title="@string/menu_save"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_music"
                android:icon="@drawable/music_24dp"
                android:title="@string/music_on_off"
                android:onClick="saveMusicSettings"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_newgame"
                android:icon="@drawable/new_26"
                android:title="@string/menu_newgame"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_about"
                android:title="@string/menu_about"
                android:icon="@drawable/about_24"
                app:showAsAction="never"
                />
        </menu>
    </item>
</menu>