<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context="com.example.eirik.fightgame.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:weightSum="1">

                <!-- Player 1 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.50"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextPlayer1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:inputType="text"
                        android:text="@string/player1"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageViewPlayer1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/player1"
                        android:src="@drawable/player1" />

                    <ProgressBar
                        android:id="@+id/progressBarPlayer1"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:max="100" />

                    <Button
                        android:id="@+id/buttonPunch1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:onClick="playerOnePunch"
                        android:paddingBottom="20dp"
                        android:paddingTop="20dp"
                        android:text="@string/button_punch1"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/buttonBlock1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:paddingBottom="20dp"
                        android:paddingTop="20dp"
                        android:text="@string/button_block1"
                        android:textSize="20sp" />
                </LinearLayout>

                <!-- Player 2 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.50"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextPlayer2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:inputType="text"
                        android:text="@string/player2"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageViewPlayer2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/player2"
                        android:src="@drawable/player2" />

                    <ProgressBar
                        android:id="@+id/progressBarPlayer2"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:max="100" />

                    <Button
                        android:id="@+id/buttonPunch2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:onClick="PlayerTwoPunch"
                        android:paddingBottom="20dp"
                        android:paddingTop="20dp"
                        android:text="@string/button_punch2"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/buttonBlock2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:paddingBottom="20dp"
                        android:paddingTop="20dp"
                        android:text="@string/button_block2"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/buttonBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/buttonBottom"
                    android:textSize="20sp"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
